2006-01-31  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindowFactory.java (createSourceWindow): Removed debugging 
	output, now will print stack trace and exit if source window glade
	file cannot be found.
	* MixedView.java (MixedView): Switched mode setting to use new
	interface.
	(load): Ditto.
	* SourceBuffer.java: Changed state from being a boolean to being an
	int with 3 possible values: source, assembly, or mixed.
	(isLineExecutable): Refactored to reflect above change.
	(isLineBroken): Ditto.
	(toggleBreakpoint): Ditto.
	(getVariable): Ditto.
	(getLineCount): Ditto.
	(hasInlineInstance): Ditto.
	(setScope): Single parameter version now uses above int-based mode
	system, dual parameter version now has switch statement for the three
	modes.
	(setShowAssembly): Refactored to setMode(int).
	* SourceView.java (setMode): Refactored to take an int instead of a
	booean.
	* SourceWindow.java (comboBoxEvent): Added section to deal with Mixed
	mode, added comments.

2006-01-30  Adam Jocksch  <ajocksch@redhat.com>

	* View.java (scrollToFunction): Added.
	(scrollToLine): Added.
	(getFunctions): Added.
	(getScope): Added.
	(showAll): Added.
	(getParent): Added.
	* MixedView.java: Added new interface methods.
	(MixedView): Created.
	(refresh): Added, calls refresh on children.
	(findNext): Now searches through the source, then assembly.
	(highlightAll): Now highlights every match in both buffers.
	(load): Loads data for both buffers.
	(getScope): Funnels call down to source buffer.
	* SourceView.java: Added new interface methods.
	* SourceWindow.java (comboBoxEvent): Now deals with the case where 
	the SOURCE/ASM option is chosen, as well as delegating the function
	goto cababilities to the View.
	(populateStackBrowser): Removed casts made possible by interface changes.
	(populateFunctionBox): Now uses getFunctions from View.

	* SourceBuffer.java (setScope): No longer takes boolean for assembly
	code, now to set assembly code you must call setShowAssembly, old